--- a/react-ui/public/index.html
+++ b/react-ui/public/index.html
@@ -17,7 +17,7 @@
     <title>Find your Starfighter</title>
   </head>
   <body>
-    <center><img src="star-wars-banner.jpg" alt="Smiley face" width="100%" height="auto"></center>
+    <center><img src="shell banner.jpg" alt="Smiley face" width="100%" height="auto"></center>
     <div id="root"></div>
     <!--
       This HTML file is a template.
